--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "init": "^0.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "postcss": "^8.4.31",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
     "sort-by": "^0.0.2",
     "tailwindcss": "^3.3.3"
