--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.16",
     "firebase": "^10.4.0",
     "init": "^0.1.2",
+    "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "sort-by": "^0.0.2",
     "tailwindcss": "^3.3.3"
